--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         var h1 = document.querySelector("h1");
         // 设置h1标签的内容
         h1.innerHTML = "亲爱的小猪宝宝<br> 我们已经认识了: <br>" + year + "年" + days + "天" + hours + "时" + minutes +"分" + seconds + "秒"+"<br>"
-		+"我已经爱你了: <br>" + year + "年" + (days-56) + "天" + hours + "时" + (minutes-23) +"分" + (seconds-20) + "秒"+"<br>Love you forever!"
+		+"我已经爱你了: <br>" + year + "年" + (days-56) + "天" + hours + "时" + (minutes-23) +"分" + (seconds-20) + "秒" + "<br>Love you forever!";
     }
 
 
